add script to run and add swagger orgs
