# src/controllers/organization.go
@@ -10,19 +10,29 @@ import (
 	"github.com/shashimalcse/Cronuseo/utils"
 )
 
-// @Description get all organizations.
-// @Accept      */*
+// @Description Get all organizations.
+// @Tags        Organization
 // @Produce     json
 // @Success     200 {array}  models.Organization
-// @failure     404 {string} Organization not exists "error"
-// @failure     500 {string} string "Server Error!"
+// @failure     500
 // @Router      /organization [get]
 func GetOrganizations(c echo.Context) error {
 	orgs := []models.Organization{}
-	handlers.GetOrganizations(&orgs)
+	err := handlers.GetOrganizations(&orgs)
+	if err != nil {
+		config.Log.Panic("Server Error!")
+		return utils.ServerErrorResponse()
+	}
 	return c.JSON(http.StatusOK, &orgs)
 }
 
+// @Description Get organization by ID.
+// @Tags        Organization
+// @Param org_id path int true "Organization ID"
+// @Produce     json
+// @Success     200 {object}  models.Organization
+// @failure     404,500
+// @Router      /organization/{org_id} [get]
 func GetOrganization(c echo.Context) error {
 	var org models.Organization
 	orgId := string(c.Param("id"))
@@ -35,11 +45,23 @@ func GetOrganization(c echo.Context) error {
 		config.Log.Info("Organization not exists")
 		return utils.NotFoundErrorResponse("Organization")
 	}
-	handlers.GetOrganization(&org, orgId)
+	err = handlers.GetOrganization(&org, orgId)
+	if err != nil {
+		config.Log.Panic("Server Error!")
+		return utils.ServerErrorResponse()
+	}
 	return c.JSON(http.StatusOK, &org)
 
 }
 
+// @Description Create organization.
+// @Tags        Organization
+// @Accept      json
+// @Param request body models.OrganizationRequest true "body"
+// @Produce     json
+// @Success     201 {object}  models.Organization
+// @failure     400,403,500
+// @Router      /organization [post]
 func CreateOrganization(c echo.Context) error {
 	var org models.Organization
 	if err := c.Bind(&org); err != nil {
@@ -57,10 +79,21 @@ func CreateOrganization(c echo.Context) error {
 		config.Log.Info("Organization already exists")
 		return utils.AlreadyExistsErrorResponse("Organization")
 	}
-	handlers.CreateOrganization(&org)
+	err = handlers.CreateOrganization(&org)
+	if err != nil {
+		config.Log.Panic("Server Error!")
+		return utils.ServerErrorResponse()
+	}
 	return c.JSON(http.StatusCreated, &org)
 }
 
+// @Description Delete organization.
+// @Tags        Organization
+// @Param org_id path int true "Organization ID"
+// @Produce     json
+// @Success     204
+// @failure     404,500
+// @Router      /organization/{org_id} [delete]
 func DeleteOrganization(c echo.Context) error {
 	var org models.Organization
 	orgId := string(c.Param("id"))
@@ -73,10 +106,23 @@ func DeleteOrganization(c echo.Context) error {
 		config.Log.Info("Organization not exists")
 		return utils.NotFoundErrorResponse("Organization")
 	}
-	handlers.DeleteOrganization(&org, orgId)
+	err = handlers.DeleteOrganization(&org, orgId)
+	if err != nil {
+		config.Log.Panic("Server Error!")
+		return utils.ServerErrorResponse()
+	}
 	return c.JSON(http.StatusNoContent, "")
 }
 
+// @Description Update organization.
+// @Tags        Organization
+// @Accept      json
+// @Param org_id path int true "Organization ID"
+// @Param request body models.OrganizationUpdateRequest true "body"
+// @Produce     json
+// @Success     201 {object}  models.Organization
+// @failure     400,403,500
+// @Router      /organization/{org_id} [put]
 func UpdateOrganization(c echo.Context) error {
 	var org models.Organization
 	orgId := string(c.Param("id"))
@@ -98,6 +144,10 @@ func UpdateOrganization(c echo.Context) error {
 		config.Log.Info("Organization not exists")
 		return utils.NotFoundErrorResponse("Organization")
 	}
-	handlers.UpdateOrganization(&org, &reqOrg, orgId)
+	err = handlers.UpdateOrganization(&org, &reqOrg, orgId)
+	if err != nil {
+		config.Log.Panic("Server Error!")
+		return utils.ServerErrorResponse()
+	}
 	return c.JSON(http.StatusCreated, &org)
 }
