# src/handlers/organization.go
@@ -7,26 +7,29 @@ import (
 	"github.com/shashimalcse/Cronuseo/repositories"
 )
 
-func GetOrganizations(orgs *[]models.Organization) {
-	repositories.GetOrganizations(orgs)
+func GetOrganizations(orgs *[]models.Organization) error {
+	return repositories.GetOrganizations(orgs)
 }
 
-func GetOrganization(org *models.Organization, id string) {
-	repositories.GetOrganization(org, id)
+func GetOrganization(org *models.Organization, id string) error {
+	return repositories.GetOrganization(org, id)
 }
 
-func CreateOrganization(org *models.Organization) {
-	repositories.CreateOrganization(org)
+func CreateOrganization(org *models.Organization) error {
+	return repositories.CreateOrganization(org)
 }
 
-func DeleteOrganization(org *models.Organization, id string) {
-	repositories.DeleteOrganization(org, id)
+func DeleteOrganization(org *models.Organization, id string) error {
+	return repositories.DeleteOrganization(org, id)
 }
 
-func UpdateOrganization(org *models.Organization, reqOrg *models.Organization, id string) {
-	repositories.GetOrganization(org, id)
+func UpdateOrganization(org *models.Organization, reqOrg *models.Organization, id string) error {
+	err := repositories.GetOrganization(org, id)
+	if err != nil {
+		return err
+	}
 	org.Name = reqOrg.Name
-	repositories.UpdateOrganization(org)
+	return repositories.UpdateOrganization(org)
 }
 
 func CheckOrganizationExistsById(id string) (bool, error) {
